add heap memory metaspace info